# mastr-model

./: .gitignore  404.html  README.md  extract-base-classes.py  gen-docs.sh  index.html  merge-linkml.py  mkdocs.yml  pdf-description-extraction.py  pyproject.toml  run-all.sh  xsd-preprocessing.py
.github/workflows/: docs.yml
docs/: index.md
docs/schema/: index.md
linkml/: mastr.yml
linkml/parts/: AnlagenEegBiomasse.yml  AnlagenEegGeothermieGrubengasDruckentspannung.yml  AnlagenEegSolar.yml  AnlagenEegSpeicher.yml  AnlagenEegWasser.yml  AnlagenEegWind.yml  (+32 more)
schema/: index.html
search/: search_index.json
xsd/: AnlagenEegBiomasse.xsd  AnlagenEegGeothermieGrubengasDruckentspannung.xsd  AnlagenEegSolar.xsd  AnlagenEegSpeicher.xsd  AnlagenEegWasser.xsd  AnlagenEegWind.xsd  AnlagenGasSpeicher.xsd  AnlagenKwk.xsd  AnlagenStromSpeicher.xsd  Bilanzierungsgebiete.xsd  EinheitenAenderungNetzbetreiberzuordnungen.xsd  EinheitenBiomasse.xsd  EinheitenGasErzeuger.xsd  EinheitenGasSpeicher.xsd  EinheitenGasverbraucher.xsd  EinheitenGenehmigung.xsd  EinheitenGeothermieGrubengasDruckentspannung.xsd  EinheitenKernkraft.xsd  EinheitenSolar.xsd  EinheitenStromSpeicher.xsd  EinheitenStromVerbraucher.xsd  EinheitenVerbrennung.xsd  EinheitenWasser.xsd  EinheitenWind.xsd  Einheitentypen.xsd  Ertuechtigungen.xsd  GeloeschteUndDeaktivierteEinheiten.xsd  GeloeschteUndDeaktivierteMarktakteure.xsd  Katalogkategorien.xsd  Katalogwerte.xsd  Lokationen.xsd  Lokationstypen.xsd  Marktakteure.xsd  MarktakteureUndRollen.xsd  Marktfunktionen.xsd  Marktrollen.xsd  Netzanschlusspunkte.xsd  Netze.xsd
(+722 files in other folders)
